--- a/deploy/addc-fe.yaml
+++ b/deploy/addc-fe.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: addc-fe
+  namespace: default
   labels:
      app: addc-fe
 spec:
@@ -28,6 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: addc-fe-svc
+  namespace: default
 spec:
   selector:
     app: addc-fe
