--- a/deploy/minsait-fe.yaml
+++ b/deploy/minsait-fe.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: minsait-fe
+  namespace: default
   labels:
      app: minsait-fe
 spec:
@@ -28,6 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: minsait-fe-svc
+  namespace: default
 spec:
   selector:
     app: minsait-fe
